--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -7,6 +7,6 @@
     {% elif isAddOffences %}
         Add offences
     {% else %}
-        Add an appearance to court case
+        Add a court case
     {% endif %}
 </span>
