RASS-436 Add validation to finished adding offences radio

--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -87,7 +87,7 @@
                                 classes: "govuk-fieldset__legend--m"
                             }
                         },
-                        errorMessage:  errors,
+                        errorMessage: errors | findError('finishedAddingOffences'),
                         items: [
                             {
                                 value: "true",
