--- a/server/views/pages/courtAppearance/overall-sentence-length.njk
+++ b/server/views/pages/courtAppearance/overall-sentence-length.njk
@@ -56,6 +56,7 @@
 
                 {{ govukRadios({
                     name: "hasOverallSentenceLength",
+                    value: courtCaseOverallSentenceLengthForm["hasOverallSentenceLength"],
                     hint: {
                         text: "Select one option."
                     },
