Fixed width of the dropdown on court name typeahead

--- a/assets/scss/local.scss
+++ b/assets/scss/local.scss
@@ -7,8 +7,12 @@
   border-bottom: none;
 }
 
-.autocomplete__input, .autocomplete__menu, .autocomplete__hint {
+.autocomplete__input, .autocomplete__hint {
   width:80% !important;
+}
+
+.autocomplete__menu {
+  width: calc(80% - 4px) !important;
 }
 
 .govuk-summary-list__row:last-child {
