--- a/server/views/pages/courtAppearance/overall-conviction-date.njk
+++ b/server/views/pages/courtAppearance/overall-conviction-date.njk
@@ -25,7 +25,7 @@
                         }
                     },
                     hint: {
-                        text: "This is the overall conviction date for the court case"
+                        text: "This is the overall conviction date for the appearance"
                     },
                     items: [
                         {
