--- a/server/views/pages/offence/offence-date.njk
+++ b/server/views/pages/offence/offence-date.njk
@@ -12,7 +12,7 @@
 
                 {% call govukFieldset({
                     legend: {
-                        text: "Enter the offence date" if isAddCourtAppearance else "Edit the offence dates",
+                        text: "Enter the offence dates" if isAddCourtAppearance else "Edit the offence dates",
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
