Alignment with prototype - task list,  next appearance option, edit links and captions

--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -26,7 +26,7 @@
                             items: [
                                 {
                                     href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-type?submitToCheckAnswers=true",
-                                    text: "Change",
+                                    text: "Edit",
                                     visuallyHiddenText: "next hearing type"
                                 }
                             ]
@@ -43,7 +43,7 @@
                             items: [
                                 {
                                     href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-date?submitToCheckAnswers=true",
-                                    text: "Change",
+                                    text: "Edit",
                                     visuallyHiddenText: "next hearing date"
                                 }
                             ]
@@ -60,7 +60,7 @@
                             items: [
                                 {
                                     href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-court-select?submitToCheckAnswers=true",
-                                    text: "Change",
+                                    text: "Edit",
                                     visuallyHiddenText: "next hearing location"
                                 }
                             ]
