--- a/server/views/pages/courtAppearance/next-hearing-type.njk
+++ b/server/views/pages/courtAppearance/next-hearing-type.njk
@@ -29,6 +29,11 @@
                             value: "Video link",
                             text: "Video link",
                             checked: nextHearingTypeForm.nextHearingType === "Video link"
+                        },
+                        {
+                            value: "Unknown",
+                            text: "Unknown",
+                            checked: nextHearingTypeForm.nextHearingType === "Unknown"
                         }
                     ]
                 }) }}
