--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -9,8 +9,8 @@
 
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            
-            <span class="govuk-caption-l">Add an appearance to court case {{ courtCaseUniqueIdentifier }}</span>
+
+            {% include "../../partials/offenceCaption.njk" %}
             <h1 class="govuk-heading-l">Review the offence details for this appearance</h1>
             
             <h2 class="govuk-heading-m govuk-!-margin-bottom-6">Offences</h2>
