--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -6,6 +6,8 @@
         Add sentence information for count {{ offence.sentence.countNumber }}
     {% elif isAddOffences %}
         Add offences
+    {% elif isReviewOffences %}
+        Review offences
     {% else %}
         Add a court case
     {% endif %}
