--- a/server/views/pages/offence/sentence-type.njk
+++ b/server/views/pages/offence/sentence-type.njk
@@ -10,7 +10,8 @@
     {% set sentenceTypeItems = sentenceTypeItems.concat({
         value: sentenceType.sentenceTypeUuid + "|" + sentenceType.classification,
         text: sentenceType.description,
-        checked: offenceSentenceTypeForm.sentenceType === sentenceType.sentenceTypeUuid
+        checked: offenceSentenceTypeForm.sentenceType === sentenceType.sentenceTypeUuid,
+        hint: sentenceType.hint
     })%}
 {% endfor %}
 
